--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     android:id="@+id/activity_main"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -17,20 +17,40 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+    <TextView
+        android:id="@+id/duration_title_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/test1"
+        android:text="duration:"
+        />
+
+    <EditText
+        android:id="@+id/duration_et"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:inputType="numberSigned"
+        android:layout_toRightOf="@+id/duration_title_tv"
+        android:layout_alignBottom="@+id/duration_title_tv"
+        android:textSize="18sp"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/duration_title_tv"
         android:orientation="horizontal">
         <Button
+            android:id="@+id/add_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="add模式"
             />
         <Button
+            android:id="@+id/full_scroll_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="fullScroll模式"/>
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
